--- a/src/components/Card/CardComponents.css
+++ b/src/components/Card/CardComponents.css
@@ -1,11 +1,17 @@
 .card-container {
-    background-color: rgb(237, 231, 231);
+    background-color: rgb(243, 243, 243);
     width: 300px;
     height: 350px;
     border-radius: 10px;
     border: 1px solid #000;
-    margin: 0 20px;
+    margin: 10px 20px;
     text-decoration: none;
+    box-shadow: 5px 5px 6px 1px rgba(0, 0, 0, 0.2);
+    transition: all 0.15s ease-in-out;
+}
+
+.card-container:hover{
+    margin-top: -5px;
 }
 
 .card-image {
@@ -47,7 +53,6 @@
     margin: 15px 0;
     font-size: 1.2rem;
 }
-
 
 .card-btn-btn {
     display: flex;
