--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,43 @@
 .header-container {
     height: 80px;
     background-color: rgb(222, 213, 203);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #000;
+}
+
+.header-container h1 {
+    margin-left: 30px;
+}
+
+.functional {
+    display: flex;
+}
+
+.search-container {
+    margin-right: 30px;
+}
+.search-container input {
+    font-size: 1.4rem;
+    padding: 5px;
+}
+
+.search-icon {
+    position: relative;
+    top: 4px;
+    font-size: 1.6rem;
+    margin-left: 10px;
+}
+
+.search-icon:hover,
+.cart-icon:hover {
+    cursor: pointer;
+}
+
+.cart-icon {
+    position: relative;
+    top: 8px;
+    font-size: 1.6rem;
+    margin-right: 20px;
 }
