--- a/src/components/selectedItemPage/SelectedItemPage.css
+++ b/src/components/selectedItemPage/SelectedItemPage.css
@@ -3,8 +3,16 @@
     align-items: center;
     margin: 0 30px;
     padding: 20px 0;
-    height: 100vh;
+    height: calc(100vh - 125px) ;
     font-size: 1.2rem;
+}
+
+.loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: calc(100vh - 125px) ;
 }
 
 .item-image {
