--- a/src/components/Card/CardComponents.css
+++ b/src/components/Card/CardComponents.css
@@ -1,6 +1,6 @@
 .card-container {
-    background-color: rgb(243, 243, 243);
-    width: 300px;
+    /* background-color: rgb(243, 243, 243); */
+    width: 250px;
     height: 350px;
     border-radius: 10px;
     border: 1px solid #000;
@@ -17,7 +17,7 @@
 .card-image {
     background-color: #ffffff;
     margin: 20px 0;
-    height: 60%;
+    height: 55%;
     width: 80%;
     position: relative;
     right: -10%;
@@ -35,12 +35,14 @@
     height: 45px;
     width: auto;
     margin: 0 15px 15px 15px;
+    padding-top: 5px;
     text-align: center;
     font-size: 1rem;
     cursor: pointer;
     text-overflow: ellipsis;
     word-wrap: break-word;
     overflow: hidden;
+    border-top: 1px solid gray;
 }
 
 .card-title:hover {
