--- a/src/components/selectedItemPage/SelectedItemPage.css
+++ b/src/components/selectedItemPage/SelectedItemPage.css
@@ -3,8 +3,8 @@
     align-items: center;
     margin: 0 30px;
     padding: 20px 0;
-    height: calc(100vh - 125px) ;
-    font-size: 1.2rem;
+    height: calc(100vh - 125px);
+    font-size: 1rem;
 }
 
 .loading {
@@ -12,18 +12,19 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: calc(100vh - 125px) ;
+    height: calc(100vh - 125px);
 }
 
 .item-image {
     display: flex;
-    width: 100%;
+    width: 60%;
 }
 
 .item-image img {
     display: flex;
     margin: auto;
-    width: 40%;
+    height: auto;
+    width: 60%;
 }
 
 .item-detail {
@@ -33,10 +34,97 @@
     justify-content: center;
 }
 
-
 .item-title,
 .item-category,
 .item-description,
 .item-price {
-    margin: 30px 0;
+    margin: 20px 0;
+}
+.quantity{
+    display: flex;
+}
+.btn,
+.quantity-input {
+    max-height: 30px;
+    width: 50px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.quantity-input{
+    border: 1px solid #000000;
+}
+
+.all-btn{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.addToCart{
+    height: 30px;
+    width: 100px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left: 30px;
+}
+
+@media screen and (max-width: 780px) {
+    .selected-container{
+        height: calc(100vh - 175px);
+    }
+
+    .item-title,
+    .item-category,
+    .item-description,
+    .item-price {
+        font-size: 0.8rem;
+    }
+
+    .item-image img {
+        width: 60%;
+    }
+    
+    .item-detail {
+        width: 70%;
+    }
+    
+    .all-btn{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .addToCart{
+        font-size: 1rem;
+        width: 142px;
+        margin-left: 0;
+        margin-top: 30px;
+    }
+    
+}
+
+@media screen and (max-width: 480px) {
+
+    .selected-container{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .item-title,
+    .item-category,
+    .item-description,
+    .item-price {
+        font-size: 0.7rem;
+        margin: 15px 0;
+    }
+
+    .item-image {
+        margin-top: 20px;
+    }
+
+    .quantity{
+        justify-content: center;
+    }
 }
