--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #000;
+    width: 100%;
 }
 
 .header-container h1 {
