--- a/src/components/selectedItemPage/SelectedItemPage.css
+++ b/src/components/selectedItemPage/SelectedItemPage.css
@@ -98,8 +98,8 @@
     .addToCart{
         font-size: 1rem;
         width: 142px;
-        margin-left: 0;
-        margin-top: 30px;
+        /* margin-left: 0; */
+        margin: 30px 0;
     }
     
 }
