--- a/src/components/CartPage/CartPage.css
+++ b/src/components/CartPage/CartPage.css
@@ -52,6 +52,30 @@
     cursor: pointer;
 }
 
+.empty-cart{
+    display: flex;
+    height: calc(100vh - 125px);
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.go-shop{
+    margin-top: 50px;
+    color: #ffffff;
+    background-color: rgb(169, 162, 162);
+    border: none;
+    padding: 10px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.go-shop:hover{
+    background-color: rgb(99, 94, 94);
+}
+
 @media screen and (max-width: 780px) {
     .cart-detail {
         height: 100px;
